[gd_scene load_steps=12 format=2]

[ext_resource path="res://Robo/Graphics/ArmsUp0000.png" type="Texture" id=1]
[ext_resource path="res://Robo/Robo.gd" type="Script" id=2]
[ext_resource path="res://Robo/Graphics/Pupils0000.png" type="Texture" id=3]
[ext_resource path="res://Robo/Graphics/LeftFoot0000.png" type="Texture" id=4]
[ext_resource path="res://Robo/Graphics/ArmsDown0000.png" type="Texture" id=5]
[ext_resource path="res://Robo/Graphics/RightFoot0000.png" type="Texture" id=6]
[ext_resource path="res://Robo/Graphics/Face0000.png" type="Texture" id=7]
[ext_resource path="res://Robo/Graphics/Body0000.png" type="Texture" id=8]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 27.3609, 27.3031 )

[sub_resource type="Animation" id=3]
resource_name = "Bump"

[sub_resource type="Animation" id=2]
resource_name = "Walk"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Robo/RightFoot:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Robo/RightFoot:scale")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Robo/LeftFoot:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ Vector2( 0, 0 ), Vector2( 0, -5 ), Vector2( 0, 0 ), Vector2( 0, 5 ), Vector2( 0, 0 ) ]
}
tracks/3/type = "value"
tracks/3/path = NodePath("Robo/LeftFoot:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( 1, 1 ) ]
}
tracks/4/type = "value"
tracks/4/path = NodePath("Robo:rotation_degrees")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 0,
"values": [ 0.0, 1.62631, 0.0, -1.6, 0.0 ]
}

[node name="Robo" type="KinematicBody2D"]
script = ExtResource( 2 )
ACCEL_TRANS = 10
STOP_TIME = 0.5
STOP_TRANS = 10
STOP_EASE = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Robo" type="Sprite" parent="."]
position = Vector2( 1.12247, 0.280617 )
rotation = -0.00329536
scale = Vector2( 0.37, 0.37 )
z_index = 1
offset = Vector2( 2.86342, -7.15854 )

[node name="ArmsDown" type="Sprite" parent="Robo"]
visible = false
texture = ExtResource( 5 )

[node name="LeftFoot" type="Sprite" parent="Robo"]
position = Vector2( 0, 0.590033 )
texture = ExtResource( 4 )

[node name="RightFoot" type="Sprite" parent="Robo"]
position = Vector2( 0, -0.590033 )
texture = ExtResource( 6 )

[node name="Body" type="Sprite" parent="Robo"]
position = Vector2( -2.93148, -0.810994 )
texture = ExtResource( 8 )
offset = Vector2( 2.93148, 0.810994 )

[node name="ArmsUp" type="Sprite" parent="Robo"]
texture = ExtResource( 1 )

[node name="Face" type="Sprite" parent="Robo"]
texture = ExtResource( 7 )

[node name="Pupils" type="Sprite" parent="Robo/Face"]
texture = ExtResource( 3 )

[node name="MoveTweener" type="Tween" parent="."]
playback_process_mode = 0

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/Bump = SubResource( 3 )
anims/Walk = SubResource( 2 )
[connection signal="tween_all_completed" from="MoveTweener" to="." method="_on_MoveTweener_tween_all_completed"]
